# LLM-AI-Models-Registry

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SPEC-LLM-REG-002-v1.2.md  SPEC-LLM-REG-002-v1.3.md  SPEC-LLM-REG-002.md  providers.json  pyproject.toml
.github/workflows/: ci.yml
scripts/: check_diff.py
src/llm_registry/: __init__.py  __main__.py  cli.py  diff_cli.py  merge.py
src/llm_registry/config/: __init__.py  loader.py
src/llm_registry/discovery/: __init__.py
src/llm_registry/discovery/api/: __init__.py  _keys.py  inference.py  openai.py  requesty.py
src/llm_registry/discovery/scraping/: __init__.py  cache.py  firecrawl.py  http.py
src/llm_registry/normalise/: __init__.py  _numbers.py  cometapi.py  dispatch.py  normaliser.py
src/llm_registry/output/: __init__.py  writer.py
src/llm_registry/schema/: model_entry.py
tests/cli/: test_update_dispatch.py
tests/config/: test_loader.py
tests/diff/: test_diff.py
tests/discovery/api/: test_auth.py  test_inference.py
tests/discovery/scraping/: test_cache.py
tests/fixtures/: cometapi_claude-opus-4-8.md  cometapi_claude-sonnet-4-6.md  cometapi_gemini-3-1-flash-lite-preview.md  cometapi_gemini-3-1-pro-preview.md  cometapi_gemini-3-flash.md  cometapi_gpt-4o.md  cometapi_sora-2.md
tests/merge/: test_merge.py
tests/normalise/: test_cometapi.py  test_numbers.py
tests/output/: test_writer.py
